--- a/CSS/Inicio.css
+++ b/CSS/Inicio.css
@@ -1,4 +1,4 @@
-main{
+main {
     width: 100vw;
     height: 72%;
 }
@@ -27,25 +27,30 @@ main{
     flex-shrink: 0;
     justify-content: space-evenly;
     min-width: 100%;
-    animation: 100s linear 0s infinite normal none running slide-x;
+    animation: 60s linear 0s infinite normal none running slide-x;
 }
 
-.slide img{
-    width: 300px;
-    height: 200px;
-    margin: 20px;
+.slide img {
+    width: 500px;
+    height: 400px;
+    margin: 0px 100px;
 }
 
 @keyframes slide-x {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-100%); }
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
-.navbar-brand img{
+.navbar-brand img {
     width: 100px;
 }
 
-.contenedorModelos{
+.contenedorModelos ul {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -54,11 +59,21 @@ main{
     margin-top: 20px;
 }
 
-.modelo{
-    margin: 0px 20px;
+.contenedorModelos li {
+    list-style-type: none;
+    margin: 10px 20px;
 }
 
-.contenedorCarros{
+.modelo {
+    margin: 0px 20px;
+    font-size: 18px;
+}
+
+.modelo:hover{
+    text-decoration-line: underline;
+}
+
+.contenedorCarros {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -66,21 +81,18 @@ main{
     flex-wrap: wrap;
 }
 
-.itemTarjeta img{
+.itemTarjeta img {
     width: 200px;
-}
-
-.zoomable {
     transition: transform .6s;
-    display: absolute;
 }
 
-.zoomable:hover {
+.itemTarjeta img:hover {
     transform: scale(1.2);
     filter: drop-shadow(6px 6px 8px rgb(0, 0, 0));
 }
 
-.itemTarjeta{
+.itemTarjeta {
+    width: 220px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -88,22 +100,27 @@ main{
     margin: 20px 60px 0px 60px;
 }
 
-.itemTarjeta button{
+.itemTarjeta button {
     margin: 10px 0px;
     padding: 5px 10px;
 }
 
-.itemTarjeta:hover{
-    border: solid transparent;
+.itemTarjeta button:hover {
+    background: linear-gradient(gray, rgb(0, 0, 0));
+    color: white;
 }
 
-.itemTarjeta a{
+.itemTarjeta a {
     font-size: 12px;
     text-decoration-line: none;
     color: black;
 }
 
-.atCliente{
+.itemTarjeta a:hover {
+    text-decoration-line: underline;
+}
+
+.atCliente {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -112,15 +129,69 @@ main{
     margin: 50px 0px;
 }
 
-.informacion{
+.atCliente {
+    width: 100%;
+    height: fit-content;
+    background: linear-gradient(gray, rgb(0, 0, 0));
+    height: 350px;
     display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.informacion {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 300px;
-    height: 160px;
-    background-color: brown;
-    margin: 0px 50px;
-    font-size: 30px;
-    color: white;
+    height: auto;
+    perspective: 1000px;
+}
+
+.contenedor {
+    position: relative;
+    width: 100%;
+    height: 100%;
     text-align: center;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+}
+
+.informacion:hover .contenedor {
+    transform: rotateY(180deg);
+}
+
+.imagenInfo,
+.tituloInfo {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 5rem;
+}
+
+.tituloInfo {
+    font-size: 30px;
+    color: black;
+    font-weight: bold;
+    transform: rotateY(180deg);
+    text-align: center;
+}
+
+.informacion img {
+    width: 320px;
+    height: 220px;
+}
+
+.informacion .textoInfo {
+    width: 100%;
+    margin-top: 40px;
+    font-size: 16px;
+    text-align: justify;
+    color: white;
 }
