--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -8,12 +8,17 @@ body{
     background-attachment: fixed;
 }
 
+nav{
+    background: linear-gradient(rgba(66, 66, 66, 0.863), rgba(0, 0, 0, 0.685));
+}
+
+
 .navbar{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    position: absolute;
+    position: relative;
 }
 
 .bg-body-tertiary{
@@ -21,9 +26,9 @@ body{
     background-color: transparent !important;
 }
 
-.navbar-toggler{
-    background-color: transparent;
-    border: 4px solid black;
+.navbar-toggler-icon {
+    display: inline-block;
+    width: 2.5em;
 }
 
 .offcanvas-header{
@@ -145,9 +150,26 @@ footer ul{
 }
 
 @media screen and (max-width: 690px){
-    .navbar-toggler {
-        font-size: 13px;
-        border: 2px solid black;
+    .navbar>.container-fluid{
+        display: flex;
+        flex-wrap: inherit;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+    .navbar-toggler-icon {
+        display: inline-block;
+        width: 1.5em;
+        border: none;
+    }
+    
+    .navbar-toggler{
+        background-color: transparent;
+        border: none;
+    }
+
+    .navbar-toggler span{
+        border: none !important;
     }
 
     footer{
