--- a/CSS/Detalles.css
+++ b/CSS/Detalles.css
@@ -1,46 +1,3 @@
-/* #contenedorDetalles{
-    width: 100vw;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.651);
-    display: none;
-    z-index: 10;
-}
-
-.ditailsContainer{
-    width: 90%;
-    height: 90%;
-    border-radius: 10px;
-    background-color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    pointer-events: none;
-    z-index: 1000;
-    position: absolute;
-}
-
-.detallesDos{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 10px;
-}
-
-.ditailsContainer img{
-    width: 40%;
-} */
-
 main{
     height: 76%;
     min-height: 75vh;
@@ -137,11 +94,20 @@ main{
     border-right: solid 4px rgb(255, 0, 0);
 }
 
+.potenciaInf p{
+    text-align: right;
+    font-size: 22px;
+}
+
 .motor p{
     width: 80%;
     font-size: 22px;
     font-weight: bolder;
     text-align: justify;
+}
+
+.motorInfo{
+    width: 50%;
 }
 
 .imgMotor,
@@ -209,6 +175,11 @@ main{
     text-align: right;
     margin-bottom: 20px;
     border-right: solid 4px rgb(255, 0, 0);
+}
+
+.transmisionInf p{
+    text-align: right;
+    font-size: 22px;
 }
 
 .imgTransmision img{
