--- a/public/CSS/Detalles.css
+++ b/public/CSS/Detalles.css
@@ -1,6 +1,5 @@
-main{
-    height: 76%;
-    min-height: 75vh;
+#containerDetalles{
+    width: 100vw;
 }
 
 .imagenDetalles{
@@ -50,8 +49,8 @@ main{
 }
 
 .imgAuto img{
-    width: 900px;
-    height: 700px;
+    width: 800px;
+    height: 600px;
 }
 
 .detallesMas{
@@ -266,4 +265,236 @@ main{
 .detalleCompra button:hover {
     background: transparent;
     color: black
+}
+
+@media screen and (max-width: 690px){
+    .imagenDetalles {
+        width: 100vw;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+
+    .infCompra{
+        width: 70%;
+        height: 50%;
+    }
+
+    .nombreImg {
+        font-size: 30px;
+    }
+
+    .imgAuto {
+        width: 100vw;
+        justify-content: center;
+    }
+
+    .imgAuto img {
+        width: 300px;
+        height: 270px;
+    }
+
+    .detallesMas{
+        width: 100vw;
+    }
+
+    .motor {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .imgMotor{
+        width: 100%;
+        justify-content: flex-start;
+    }
+
+    .imgMotor img {
+        width: 300px;
+        height: 253px;
+        margin-left: 30px;
+    }
+
+    .motorInfo {
+        width: 100%;
+        margin-top: 50px;
+        margin-left: 100px;
+    }
+
+    .motorInfo p{
+        width: 80vw;
+        font-size: 16px;
+    }
+
+    .potencia{
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
+
+    .imgPotencia img {
+        width: 250px;
+        height: 120px;
+        margin-left: 30px;
+    }
+
+    .potenciaInf{
+        margin-top: 50px;
+        margin-left: 30px;
+    }
+
+    .potencia h1 {
+        border-right: none;
+        border-left: solid 4px rgb(255, 0, 0);
+        text-align: left;
+    }
+
+    .potenciaInf p {
+        width: 80vw;
+        text-align: left;
+        font-size: 16px;
+    }
+
+    .torque{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .torqueInf{
+        margin-top: 50px;
+        margin-left: 30px;
+    }
+
+    .torqueInf p{
+        width: 80vw;
+        font-size: 16px;
+    }
+
+    .imgTorque img {
+        width: 300px;
+        height: 200px;
+        margin-left: 30px;
+    }
+
+    .transmision{
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
+
+    .imgTransmision img {
+        width: 300px;
+        height: 220px;
+        margin-left: 30px;
+    }
+
+    .transmision h1 {
+        border-right: none;
+        border-left: solid 4px rgb(255, 0, 0);
+        text-align: left;
+    }
+
+    .transmisionInf{
+        margin-top: 50px;
+        margin-left: 30px;
+    }
+
+    .transmisionInf p {
+        width: 80vw;
+        text-align: left;
+        font-size: 16px;
+    }
+
+    .performanceInf{
+        width: 100vw;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .performanceInf h1{
+        border-right: none;
+        border-left: solid 4px rgb(255, 0, 0);
+    }
+
+    .performanceInf p {
+        width: 80vw;
+        font-size: 16px;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .muestraCompra{
+        width: 100vw;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .imgD{
+        width: 80vw;
+    }
+
+    .imgD img {
+        width: 340px;
+        height: 300px;
+    }
+
+    .precio {
+        color: black;
+        font-size: 25px;
+    }
+
+    .detalleCompra button {
+        font-size: 16px;
+        padding: 5px;
+    }
+
+}
+
+@media screen and (min-width: 690px) and (max-width: 1024px) {
+    .bg-body-tertiary {
+        width: 100%;
+        height: 14vh;
+    }
+
+
+
+    .imagenDetalles {
+        width: 105%;
+        height: 55vh;
+        margin: 0px;
+    }
+
+    .nombreImg{
+        font-size: 40px;
+    }
+
+    .imgAuto{
+        width: 50%;
+    }
+
+    .imgAuto img {
+        width: 450px;
+        height: 300px;
+    }
+
+    .imgMotor img {
+        width: 300px;
+        height: 200px;
+    }
+
+    .imgPotencia img {
+        width: 200px;
+        height: 180px;
+    }
+
+    .imgTorque img {
+        width: 300px;
+        height: 180px;
+    }
+
+    .imgTransmision img {
+        width: 300px;
+        height: 250px;
+    }
+
+    .imgD img {
+        width: 450px;
+        height: 300px;
+    }
 }
