--- a/public/CSS/Inicio.css
+++ b/public/CSS/Inicio.css
@@ -24,8 +24,8 @@
 }
 
 .carousel-container img{
-    width: 350px;
-    height: 348px;
+    width: 320px;
+    height: 300px;
     margin-left: 100px;
 }
 
@@ -91,7 +91,7 @@ label{
     justify-content: space-between;
 }
 
-.search{
+/* .search{
     margin-right: 140px;
 }
 
@@ -102,7 +102,7 @@ input[type="search"]{
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.822);
     color: white;
-}
+} */
 
 .contenedorCarros {
     width: 100%;
@@ -115,7 +115,7 @@ input[type="search"]{
 }
 
 .itemTarjeta img {
-    width: 200px;
+    width: 260px;
     transition: transform .6s;
 }
 
@@ -125,19 +125,17 @@ input[type="search"]{
 }
 
 .itemTarjeta {
-    width: 250px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    margin: 20px;
+    margin: 20px 65px 70px 65px;
 }
 
 .itemTarjeta:hover{
-    width: 250px;
     background-color: rgba(102, 89, 89, 0.253);
     border-radius: 30px 0px;
-    
 }
 
 .itemTarjeta button {
@@ -327,7 +325,7 @@ input[type="search"]{
     }
     .carousel-container img{
         width: 230px;
-        height: 200px;
+        height: 180px;
         margin-left: 50px;
     }
 
