--- a/public/CSS/Inicio.css
+++ b/public/CSS/Inicio.css
@@ -112,7 +112,7 @@ input[type="search"]{
 }
 
 .ceroResultado img{
-    width: 400px;
+    width: 600px;
 }
 
 .contenedorCarros {
@@ -282,8 +282,8 @@ input[type="search"]{
         height: 100px;
     }
     .carousel-container img{
-        width: 110px;
-        height: 110px;
+        width: 140px;
+        height: 140px;
         margin-left: 10px;
     }
 
@@ -309,6 +309,10 @@ input[type="search"]{
 
     .itemTarjeta img {
         width: 160px;
+    }
+
+    .ceroResultado img {
+        width: 310px;
     }
 
     .atCliente {
