--- a/public/CSS/Style.css
+++ b/public/CSS/Style.css
@@ -1,18 +1,18 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
 
-body{
+body {
     background-image: url(../Imagenes/fondoLD.avif);
     background-attachment: fixed;
 }
 
-nav{
+nav {
     background: linear-gradient(rgba(66, 66, 66, 0.863), rgba(0, 0, 0, 0.685));
 }
 
-.navbar{
+.navbar {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -20,7 +20,7 @@ nav{
     position: relative;
 }
 
-.bg-body-tertiary{
+.bg-body-tertiary {
     width: 100%;
     height: 12vh;
     background-color: transparent !important;
@@ -31,24 +31,24 @@ nav{
     width: 2.5em;
 }
 
-.offcanvas-header{
+.offcanvas-header {
     background-color: gray;
 }
 
-.offcanvas-body{
-    background: linear-gradient(gray, rgb(53, 53, 53),rgb(99, 98, 98));
+.offcanvas-body {
+    background: linear-gradient(gray, rgb(53, 53, 53), rgb(99, 98, 98));
 }
 
-.offcanvas-title{
+.offcanvas-title {
     color: white;
     font-size: 30px;
 }
 
-.btn-close{
+.btn-close {
     font-size: 20px;
 }
 
-.btn-outline-success{
+.btn-outline-success {
     background-color: black;
     color: white;
     border-color: black;
@@ -67,7 +67,7 @@ nav{
     border-color: transparent;
 }
 
-.dropdown-item{
+.dropdown-item {
     font-size: 20px;
     color: black;
     font-weight: bold;
@@ -84,25 +84,64 @@ nav{
     width: 60px;
 }
 
-footer{
+footer {
     width: 100vw;
-    height: 15vh;
-    background-color: transparent;
+    background: linear-gradient(rgb(199, 199, 199), rgb(145, 145, 145), rgb(63, 61, 61));
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
 }
 
-footer ul{
+footer img {
+    width: 60px;
+}
+
+.tituloFooter {
+    font-size: 40px;
+    color: black;
+    margin-left: 20px;
+    padding-top: 25px;
+}
+
+.navFooter ul li a {
+    font-size: 14px;
+    line-height: 10px;
+}
+
+footer section ul {
     display: flex;
     flex-direction: row;
     justify-content: left;
     align-items: flex-start;
 }
 
-.iconos{
+.footer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.politicas {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.politicas p {
+    text-decoration-line: underline;
+    cursor: pointer;
+    font-size: 12px;
+    color: black;
+}
+
+.iconos {
     list-style-type: none;
-    margin: 10px 25px;
+    margin: 10px 30px;
     font-size: 30px;
 }
 
@@ -143,18 +182,18 @@ footer ul{
     background-color: red;
 }
 
-.copyR{
-    font-size: 10px;
-    color: black;
+.copyR {
+    font-size: 12px;
+    color: white;
     margin-right: 10px;
 }
 
-@media screen and (max-width: 690px){
-    .offcanvas{
+@media screen and (max-width: 690px) {
+    .offcanvas {
         max-width: 80%;
     }
 
-    .navbar>.container-fluid{
+    .navbar>.container-fluid {
         display: flex;
         flex-wrap: inherit;
         align-items: flex-start;
@@ -166,47 +205,64 @@ footer ul{
         width: 1.5em;
         border: none;
     }
-    
-    .navbar-toggler{
+
+    .navbar-toggler {
         background-color: transparent;
         border: none;
     }
 
-    .navbar-toggler span{
+    .navbar-toggler span {
         border: none !important;
     }
 
-    footer{
+    footer {
         flex-direction: column;
         justify-content: center;
+        align-items: center;
+    }
+
+    .tituloFooter{
+        margin-left: 15px;
+        margin-bottom: 25px;
+    }
+
+    .footer {
+        flex-direction: column-reverse;
+    }
+
+    .politicas {
+        font-size: 10px;
         align-items: flex-start;
+        line-height: 10px;
     }
 
-    .iconos{
-        margin: 0px;
+    .iconos {
+        margin: 20px 0px;
     }
 
-    .iconos i{
+    .iconos i {
         padding: 5px;
         border-radius: 30px;
         font-size: 20px;
     }
 
-    .copyR{
-        margin-left: 50px;
+    .copyR {
+        margin-top: 40px;
+        margin-left: 20px;
     }
 
     .instagram i:hover {
         font-size: 25px;
     }
-    
+
     .facebook i:hover {
         font-size: 25px;
     }
-    
+
     .twitter i:hover {
         font-size: 25px;
     }
+
     .youtube i:hover {
         font-size: 25px;
     }
