--- a/public/CSS/Inicio.css
+++ b/public/CSS/Inicio.css
@@ -247,7 +247,7 @@ input[type="search"]{
 }
 
 .informacion img {
-    width: 410px;
+    width: 390px;
     height: 295px;
 }
 
@@ -264,7 +264,7 @@ input[type="search"]{
     }
 
     button>i {
-        font-size: 25px;
+        font-size: 23px;
     }
 
     .carousel-controls button {
@@ -273,7 +273,7 @@ input[type="search"]{
 
     .carousel {
         position: relative;
-        height: 18vh;
+        height: 22vh;
         background-size: cover;
     }
 
@@ -285,6 +285,7 @@ input[type="search"]{
         width: 140px;
         height: 140px;
         margin-left: 10px;
+        margin-right: 10px;
     }
 
     #containerBusqueda{
@@ -292,7 +293,7 @@ input[type="search"]{
     }
 
     label{
-        font-size: 16px;
+        font-size: 12px;
     }
 
     .checkbox{
@@ -305,6 +306,10 @@ input[type="search"]{
 
     input[type="search"]{
         width: 250px;
+    }
+
+    .itemTarjeta{
+        margin: 20px 65px 40px 65px;
     }
 
     .itemTarjeta img {
