--- a/public/CSS/Inicio.css
+++ b/public/CSS/Inicio.css
@@ -184,13 +184,6 @@ input[type="search"]{
 }
 
 .atCliente {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.atCliente {
     width: 100%;
     height: 350px;
     background: linear-gradient(gray, rgb(0, 0, 0));
@@ -247,7 +240,7 @@ input[type="search"]{
 }
 
 .informacion img {
-    width: 390px;
+    width: 100%;
     height: 295px;
 }
 
@@ -342,7 +335,7 @@ input[type="search"]{
     }
 }
 
-@media screen and (min-width: 690px) and (max-width: 1024px) {
+@media screen and (min-width: 690px) and (max-width: 1224px) {
     .carousel {
         position: relative;
         height: 30vh;
