--- a/public/CSS/Style.css
+++ b/public/CSS/Style.css
@@ -22,7 +22,7 @@ nav {
 
 .bg-body-tertiary {
     width: 100%;
-    height: 12vh;
+    height: 13vh;
     background-color: transparent !important;
 }
 
@@ -100,6 +100,7 @@ footer img {
 
 .tituloFooter {
     font-size: 40px;
+    font-weight: bolder;
     color: black;
     margin-left: 20px;
     padding-top: 25px;
