--- a/public/CSS/Consecionarios.css
+++ b/public/CSS/Consecionarios.css
@@ -7,7 +7,8 @@
 }
 
 .titulo{
-    font-size: 30px;
+    font-size: 35px;
+    font-weight: bolder;
     width: fit-content;
     text-align: center;
     color: black;
