pagina contactos y servicios lista

--- a/public/CSS/Contactanos.css
+++ b/public/CSS/Contactanos.css
@@ -1,16 +1,34 @@
 #contenedorContactanos {
-  flex-direction: column; }
+  flex-direction: column;
+  margin-top: 30px;
+}
 
 .container {
-  display: flex; }
-  .container-vertical {
-    flex-direction: column; }
+  display: flex;
+}
+
+.container-vertical {
+  flex-direction: column;
+}
+
+.container-info {
+  justify-content: between;
+}
+
+.form-control{
+  border: solid rgb(0, 0, 0) 2px;
+}
+
+@media (max-device-width: 991px) {
   .container-info {
-    justify-content: between; }
-    @media (max-device-width: 991px) {
-      .container-info {
-        flex-direction: column; }
-        .container-info #form-contacto {
-          width: 100%; } }
-    .container-info .itemTarjeta {
-      width: auto; }
+    flex-direction: column;
+  }
+
+  .container-info #form-contacto {
+    width: 100%;
+  }
+}
+
+.container-info .itemTarjeta {
+  width: auto;
+}
