--- a/public/CSS/Inicio.css
+++ b/public/CSS/Inicio.css
@@ -5,7 +5,7 @@
 }
 
 .carousel {
-    background: linear-gradient(rgba(0, 0, 0, 0.685), rgba(63, 62, 62, 0.747), rgb(202, 199, 199), rgba(0, 0, 0, 0.863)) ;
+    background: linear-gradient(rgba(0, 0, 0, 0.685), rgba(63, 62, 62, 0.747), rgb(202, 199, 199), rgba(0, 0, 0, 0.863));
     width: 100%;
     height: 50vh;
     align-items: center;
@@ -13,7 +13,7 @@
     justify-content: center;
 }
 
-.carousel img{
+.carousel img {
     width: 500px;
     height: 350px;
 }
@@ -23,7 +23,7 @@
     transition: transform 1s ease;
 }
 
-.carousel-container img{
+.carousel-container img {
     width: 320px;
     height: 300px;
     margin-left: 100px;
@@ -48,54 +48,52 @@
     justify-content: space-between;
 }
 
-.carousel-controls button {
+.carousel-controls button>i{
+    font-size: 40px;
     padding: 5px 10px;
-    font-size: 18px;
 }
 
 .prev-button,
-.next-button{
+.next-button {
     background-color: transparent;
     border: none;
 }
 
-button>i{
+button>i {
     font-size: 50px;
     font-weight: bolder;
     color: rgb(49, 49, 49);
-    /* border: 2px solid black;
-    background-color: beige; */
 }
 
 .navbar-brand img {
     width: 100px;
 }
 
-.checkbox{
+.checkbox {
     margin: 20px 0px 30px 40px
 }
 
-input[type="checkbox"]{
+input[type="checkbox"] {
     margin-left: 20px;
 }
 
-label{
+label {
     font-size: 20px;
     font-weight: bolder;
 }
 
-#containerBusqueda{
+#containerBusqueda {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
-.search{
+.search {
     margin-right: 140px;
 }
 
-input[type="search"]{
+input[type="search"] {
     width: 400px;
     height: 35px;
     border-bottom: solid rgb(255, 0, 0) 2px;
@@ -104,14 +102,14 @@ input[type="search"]{
     color: white;
 }
 
-.ceroResultado{
+.ceroResultado {
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.ceroResultado img{
+.ceroResultado img {
     width: 600px;
 }
 
@@ -144,7 +142,7 @@ input[type="search"]{
     margin: 20px 65px 70px 65px;
 }
 
-.itemTarjeta:hover{
+.itemTarjeta:hover {
     background-color: rgba(102, 89, 89, 0.253);
     border-radius: 30px 0px;
 }
@@ -171,14 +169,14 @@ input[type="search"]{
     text-decoration-line: underline;
 }
 
-.cotizacion{
+.cotizacion {
     border: none;
     text-decoration-line: underline;
     background-color: transparent;
     font-size: 12px;
 }
 
-.cotizacion i{
+.cotizacion i {
     font-size: 11px;
     color: black;
 }
@@ -251,7 +249,7 @@ input[type="search"]{
     color: white;
 }
 
-@media screen and (max-width: 690px){
+@media screen and (max-width: 690px) {
     .navbar-brand img {
         width: 50px;
     }
@@ -270,38 +268,39 @@ input[type="search"]{
         background-size: cover;
     }
 
-    .carousel img{
+    .carousel img {
         width: 110px;
         height: 100px;
     }
-    .carousel-container img{
+
+    .carousel-container img {
         width: 140px;
         height: 140px;
         margin-left: 10px;
         margin-right: 10px;
     }
 
-    #containerBusqueda{
+    #containerBusqueda {
         flex-direction: column;
     }
 
-    label{
+    label {
         font-size: 12px;
     }
 
-    .checkbox{
-        margin: 10px 0px;
-    }
-    
-    .search{
+    .checkbox {
         margin: 10px 0px;
     }
 
-    input[type="search"]{
+    .search {
+        margin: 10px 0px;
+    }
+
+    input[type="search"] {
         width: 250px;
     }
 
-    .itemTarjeta{
+    .itemTarjeta {
         margin: 20px 65px 40px 65px;
     }
 
@@ -329,7 +328,7 @@ input[type="search"]{
         font-size: 14px;
     }
 
-    .informacion img{
+    .informacion img {
         width: 100%;
         height: 230px;
     }
@@ -342,32 +341,34 @@ input[type="search"]{
         background-size: cover;
     }
 
-    .carousel img{
+    .carousel img {
         width: 330px;
         height: 200px;
     }
-    .carousel-container img{
+
+    .carousel-container img {
         width: 230px;
         height: 180px;
         margin-left: 50px;
     }
 
-    #containerBusqueda{
+    #containerBusqueda {
         flex-direction: column;
     }
 
-    .checkbox{
+    .checkbox {
         margin: 15px 0px;
     }
-    
-    .search{
+
+    .search {
         margin: 15px 0px;
     }
 
     .informacion {
-        width:60%;
+        width: 60%;
         height: 340px;
     }
+
     .textoInfo {
         width: 100%;
     }
@@ -378,7 +379,7 @@ input[type="search"]{
         flex-direction: column;
     }
 
-    .informacion img{
+    .informacion img {
         width: 100%;
         height: 270px;
     }
